--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "eslint-plugin-vitest-globals": "^1.5.0",
     "jsdom": "^24.1.0",
+    "prettier": "3.3.3",
     "vite": "^5.3.1",
     "vitest": "^2.0.3"
   }
